Sync all content

--- a/content/resources/mit16_a47f09_sw1.md
+++ b/content/resources/mit16_a47f09_sw1.md
@@ -5,8 +5,13 @@ description: 'Example of student work for the final writing assignment of the co
   is MIT doing the right things to prepare you for the future? What should MIT do?
   Where do you want your education to take you? How can MIT help you achieve these
   goals?'
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/16-a47-the-engineer-of-2020-fall-2009/d7ddda3c43dee5139359379426d58291_MIT16_A47F09_sw1.pdf
+file: /media/courses/16-a47-the-engineer-of-2020-fall-2009/d7ddda3c43dee5139359379426d58291_MIT16_A47F09_sw1.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: MIT and the Engineer of 2020
 uid: d7ddda3c-43de-e513-9359-379426d58291
