--- a/content/resources/16-a47f09-th.md
+++ b/content/resources/16-a47f09-th.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Engineering students at Olin College compete in a Things That Go dragster
   race. (Photograph by Tostie14 on Flickr.)
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/16-a47-the-engineer-of-2020-fall-2009/4643a4c600dcc5bbe450f9808ac355eb_16-a47f09-th.jpg
+file: /media/courses/16-a47-the-engineer-of-2020-fall-2009/4643a4c600dcc5bbe450f9808ac355eb_16-a47f09-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Engineering students at Olin College compete in a Things That Go dragster
@@ -10,6 +10,8 @@ image_metadata:
     on Flickr.)
   credit: ''
   image-alt: Photograph of a student racing a dragster.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: Dragster Races
 uid: 4643a4c6-00dc-c5bb-e450-f9808ac355eb
