--- a/content/resources/16-a47f09.md
+++ b/content/resources/16-a47f09.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Engineering students at Olin College compete in a Things That Go dragster
   race. (Photograph by Tostie14 on Flickr.)
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/16-a47-the-engineer-of-2020-fall-2009/546332d6d42998b9891652cab34214fb_16-a47f09.jpg
+file: /media/courses/16-a47-the-engineer-of-2020-fall-2009/546332d6d42998b9891652cab34214fb_16-a47f09.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Engineering students at Olin College compete in a Things That Go dragster
@@ -10,6 +10,8 @@ image_metadata:
     on Flickr.)
   credit: ''
   image-alt: Photograph of a student racing a dragster.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: Dragster Races
 uid: 546332d6-d429-98b9-8916-52cab34214fb
