Sync all content

--- a/content/resources/mit16_a47f09_sw1.md
+++ b/content/resources/mit16_a47f09_sw1.md
@@ -12,6 +12,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 6e42abb8-26b4-8089-198e-017544b42be8
 resourcetype: Document
 title: MIT and the Engineer of 2020
 uid: d7ddda3c-43de-e513-9359-379426d58291
