--- a/content/resources/mit16_a47f09_sw2.md
+++ b/content/resources/mit16_a47f09_sw2.md
@@ -12,6 +12,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 6e42abb8-26b4-8089-198e-017544b42be8
 resourcetype: Document
 title: Week 12 & 13 Essay
 uid: c43e7749-8f59-8987-fd18-2e01f2ba83f4
