--- a/content/resources/mit16_a47f09_sw3.md
+++ b/content/resources/mit16_a47f09_sw3.md
@@ -12,6 +12,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 6e42abb8-26b4-8089-198e-017544b42be8
 resourcetype: Document
 title: Example 3
 uid: edcd9faa-ccf0-13cf-c864-10c3ebd6b77b
