--- a/content/resources/16-a47f09-th.md
+++ b/content/resources/16-a47f09-th.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Engineering students at Olin College compete in a Things That Go dragster
   race. (Photograph by Tostie14 on Flickr.)
-file: /media/courses/16-a47-the-engineer-of-2020-fall-2009/4643a4c600dcc5bbe450f9808ac355eb_16-a47f09-th.jpg
+file: /courses/16-a47-the-engineer-of-2020-fall-2009/4643a4c600dcc5bbe450f9808ac355eb_16-a47f09-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Engineering students at Olin College compete in a Things That Go dragster
@@ -16,3 +16,5 @@ resourcetype: Image
 title: Dragster Races
 uid: 4643a4c6-00dc-c5bb-e450-f9808ac355eb
 ---
+Engineering students at Olin College compete in a Things That Go dragster race. (Photograph by Tostie14 on Flickr.)
+
