--- a/content/resources/16-a47f09.md
+++ b/content/resources/16-a47f09.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Engineering students at Olin College compete in a Things That Go dragster
   race. (Photograph by Tostie14 on Flickr.)
-file: /media/courses/16-a47-the-engineer-of-2020-fall-2009/546332d6d42998b9891652cab34214fb_16-a47f09.jpg
+file: /courses/16-a47-the-engineer-of-2020-fall-2009/546332d6d42998b9891652cab34214fb_16-a47f09.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Engineering students at Olin College compete in a Things That Go dragster
@@ -16,3 +16,5 @@ resourcetype: Image
 title: Dragster Races
 uid: 546332d6-d429-98b9-8916-52cab34214fb
 ---
+Engineering students at Olin College compete in a Things That Go dragster race. (Photograph by Tostie14 on Flickr.)
+
