--- a/content/resources/mit16_a47f09_sw2.md
+++ b/content/resources/mit16_a47f09_sw2.md
@@ -5,7 +5,7 @@ description: 'Example of student work for the final writing assignment of the co
   is MIT doing the right things to prepare you for the future? What should MIT do?
   Where do you want your education to take you? How can MIT help you achieve these
   goals?'
-file: /media/courses/16-a47-the-engineer-of-2020-fall-2009/c43e77498f598987fd182e01f2ba83f4_MIT16_A47F09_sw2.pdf
+file: /courses/16-a47-the-engineer-of-2020-fall-2009/c43e77498f598987fd182e01f2ba83f4_MIT16_A47F09_sw2.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -17,3 +17,5 @@ resourcetype: Document
 title: Week 12 & 13 Essay
 uid: c43e7749-8f59-8987-fd18-2e01f2ba83f4
 ---
+Example of student work for the final writing assignment of the course.  Students were asked to consider the following questions: In light of what you have learned, is MIT doing the right things to prepare you for the future? What should MIT do? Where do you want your education to take you? How can MIT help you achieve these goals?
+
