--- a/content/resources/mit16_a47f09_sw3.md
+++ b/content/resources/mit16_a47f09_sw3.md
@@ -5,7 +5,7 @@ description: 'Example of student work for the final writing assignment of the co
   our students? Do MIT students have any advantages over our competitors? What should
   our education do? Where do you want your education to take you? What do you think
   it should give you? How do you think MIT will help you achieve these goals? '
-file: /media/courses/16-a47-the-engineer-of-2020-fall-2009/edcd9faaccf013cfc86410c3ebd6b77b_MIT16_A47F09_sw3.pdf
+file: /courses/16-a47-the-engineer-of-2020-fall-2009/edcd9faaccf013cfc86410c3ebd6b77b_MIT16_A47F09_sw3.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -17,3 +17,5 @@ resourcetype: Document
 title: Example 3
 uid: edcd9faa-ccf0-13cf-c864-10c3ebd6b77b
 ---
+Example of student work for the final writing assignment of the course.  Students were asked to consider the following questions: Are we doing the right thing for our students? Do MIT students have any advantages over our competitors? What should our education do? Where do you want your education to take you? What do you think it should give you? How do you think MIT will help you achieve these goals? 
+
