Sync all content

--- a/content/resources/16-a47f09.md
+++ b/content/resources/16-a47f09.md
@@ -11,10 +11,10 @@ image_metadata:
   credit: ''
   image-alt: Photograph of a student racing a dragster.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Dragster Races
 uid: 546332d6-d429-98b9-8916-52cab34214fb
 ---
 Engineering students at Olin College compete in a Things That Go dragster race. (Photograph by Tostie14 on Flickr.)
-
