Sync all content

--- a/content/resources/mit16_a47f09_sw1.md
+++ b/content/resources/mit16_a47f09_sw1.md
@@ -6,6 +6,7 @@ description: 'Example of student work for the final writing assignment of the co
   Where do you want your education to take you? How can MIT help you achieve these
   goals?'
 file: /courses/16-a47-the-engineer-of-2020-fall-2009/d7ddda3c43dee5139359379426d58291_MIT16_A47F09_sw1.pdf
+file_size: 29418
 file_type: application/pdf
 learning_resource_types:
 - Assignments
