--- a/content/resources/mit16_a47f09_sw3.md
+++ b/content/resources/mit16_a47f09_sw3.md
@@ -6,6 +6,7 @@ description: 'Example of student work for the final writing assignment of the co
   our education do? Where do you want your education to take you? What do you think
   it should give you? How do you think MIT will help you achieve these goals? '
 file: /courses/16-a47-the-engineer-of-2020-fall-2009/edcd9faaccf013cfc86410c3ebd6b77b_MIT16_A47F09_sw3.pdf
+file_size: 222476
 file_type: application/pdf
 learning_resource_types:
 - Assignments
