Sync all content

--- a/content/resources/16-a47f09-th.md
+++ b/content/resources/16-a47f09-th.md
@@ -7,8 +7,8 @@ file_size: 6498
 file_type: image/jpeg
 image_metadata:
   caption: Engineering students at Olin College compete in a Things That Go dragster
-    race. (Photograph by [Tostie14](http://www.flickr.com/photos/tostie14/34400424/)
-    on Flickr.)
+    race. (Photograph by {{% resource_link "cf9a152b-a5c0-4596-b9fe-878a0550cf01"
+    "Tostie14" %}} on Flickr.)
   credit: ''
   image-alt: Photograph of a student racing a dragster.
 learning_resource_types: []
